# TabDock

./: README.md  main.py  pyproject.toml  test_file_viewer.py
Data/: retrieve_data.py
Data/Saves/: AAPL_1d_1mo_2026-03-05_22-33-54.csv  APPLE.csv  MSFT_I1d_P1mo_2026-03-05_21-08-43.csv  NVDA_1d_1mo_2026-03-05_22-34-03.csv  NVDA_I_1wk_D_2025-01-20_2026-01-20_2026-03-05_21-10-26.csv  TSM_1d_1mo_2026-03-05_22-29-40.csv
UI/: TabDock.py  _style_guide.py  _trade_settings.py  custom_widgets.py  dock.py  main_UI.py  root.py  section_preview_data.py  section_retrieve_data.py  tab.py  tab_data.py
tabdock/: TabDock.py  __init__.py  _style_guide.py  connector_manager.py  dock.py  hconnector.py  panel.py  panel_state.py  qt_themes_compat.py  tab.py  vconnector.py
tabdock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tabdock/tabs/: __init__.py  editor_tab.py  left_main_tab.py  quad_tab.py  standard_tab.py  top_bottom_tab.py
