[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabdock"
version = "0.2.0"
description = "A PyQt6 dockable layout framework for Python desktop applications"
authors = [
    { name = "Tristan Winata", email = "twinata@sas.upenn.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "PyQt6",
]

[project.optional-dependencies]
themes = [
    "qt-themes",
    "qtpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tabdock*"]
